[tool.poetry]
name = "deepseek-api"
version = "0.1.0"
description = "Pythonic API for DeepSeek"
authors = ["Linus Mixson <lmixson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^24.4.2"}
pre-commit = "^3.7.1"
mypy = "^1.10.1"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
